finished up getting the routes completed and added publisher routes
